@@ -21,6 +21,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -41,19 +42,32 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         return http
                 .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Aplica a configuração de CORS
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+                        // IMPORTANTE: Liberar explicitamente o método OPTIONS para o Pre-flight do CORS funcionar
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // Endpoints públicos
                         .requestMatchers("/error").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/autenticacao/login/**").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/autenticacao/login**").permitAll()
-                        .requestMatchers("/auth/**", "/cadastro/**", "/ws/**", "/login**", "/oauth2/**").permitAll()
-                        .requestMatchers("/images/**").permitAll()
-                        .requestMatchers(
-                                "/v3/api-docs/**",
-                                "/swagger-ui/**",
-                                "/swagger-ui.html"
-                        ).permitAll()
+                        .requestMatchers(HttpMethod.POST, "/autenticacao/login").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/autenticacao/login/google").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/cadastro/**").permitAll()
+
+                        // Endpoints públicos de leitura (se necessário)
+                        .requestMatchers(HttpMethod.GET, "/projetos/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/vagas/**").permitAll()
+
+                        // Endpoints de arquivos/imagens
+                        .requestMatchers("/images/**", "/api/arquivos/**").permitAll()
+
+                        // Swagger / Docs
+                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+
+                        // WebSockets (Handshake inicial)
+                        .requestMatchers("/ws/**").permitAll()
+
+                        // Qualquer outra requisição exige autenticação
                         .anyRequest().authenticated()
                 )
                 .exceptionHandling(ex -> ex.authenticationEntryPoint(
@@ -66,10 +80,31 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://127.0.0.1:5500", "http://127.0.0.1:5501", "http://localhost:3000", "http://127.0.0.1:5502"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+
+        // Lista exata das origens permitidas (Frontend no Vercel, Localhost, etc)
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://127.0.0.1:5500",
+                "http://127.0.0.1:5501",
+                "http://127.0.0.1:5502",
+                "http://localhost:3000",
+                "http://localhost:5500",
+                "https://senaicommunitydeploy-production.up.railway.app",
+                "https://senaicommunityapp.up.railway.app",
+                "https://senaicommunityfront.vercel.app" // A URL que estava dando erro
+        ));
+
+        // Métodos permitidos
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+
+        // Headers permitidos (importante para o token JWT e headers do Google)
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+
+        // Expor headers caso o front precise ler algum header específico da resposta
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+
+        // Permitir credenciais (cookies, headers de auth)
         configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
